# magebuild

./: CHANGELOG.md  Cargo.toml  README.md  composer.json  dist-workspace.toml  release-please-config.json
.github/workflows/: bump-magequery.yml  ci.yml  composer-branch.yml  magebuild-release.yml  publish-mirror.yml  release-please.yml  sign-release.yml
packaging/composer/src/: version.php
scripts/: publish-composer-branch.sh
src/: Launcher.php  config.rs  graph.rs  json.rs  main.rs  preflight.rs  render.rs  scheduler.rs  steps.rs  version.php
