[package]
name = "magebuild"
version = "0.2.2" # x-release-please-version
edition = "2024"
rust-version = "1.95"
license = "EUPL-1.2"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
repository = "https://github.com/cresset-tools/magebuild"
description = "Build a Magento release as fast as possible — a parallel, DAG-ordered orchestrator that runs composer install, di-compile, static-content-deploy, autoload dump, and packaging in one process, replacing the build half of a Deployer recipe."

[dependencies]
# Magento engines — git-pinned to cresset-tools/magequery (public repo), linked
# in-process. di-compile: magecommand-engine (scan -> compute_outputs ->
# write_generated); static-content-deploy: magecommand's static_deploy; Magento
# discovery/index: magequery-core.
magequery-core = { git = "https://github.com/cresset-tools/magequery", rev = "5f31bf3dd5d69847128244b115896961fa3df7ad" }
magecommand-engine = { git = "https://github.com/cresset-tools/magequery", rev = "5f31bf3dd5d69847128244b115896961fa3df7ad" }
magecommand = { git = "https://github.com/cresset-tools/magequery", rev = "5f31bf3dd5d69847128244b115896961fa3df7ad" }

# Composer client — crates.io. composer-install (install-from-lock),
# composer-autoload (optimized dump-autoload), composer-manifest (lockfile model).
composer-install = "0.1"
composer-autoload = "0.1"
composer-manifest = "0.1"

# CLI + orchestration.
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
tar = "0.4"
flate2 = "1"
# Parallel gzip for the package step: the tar thread serializes while a worker
# pool compresses blocks concurrently (standard multi-member .tar.gz output).
# default-features off to skip the snappy backend we don't use.
gzp = { version = "0.11", default-features = false, features = ["deflate_default"] }
# zstd for `.tar.zst` artifacts — faster and denser than gzip, with the
# `zstdmt` feature giving libzstd's built-in multi-threaded compression.
zstd = { version = "0.13", features = ["zstdmt"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"

# The profile cargo-dist builds release binaries with.
[profile.dist]
inherits = "release"
lto = "thin"
